crates/mun_compiler/src/snapshots/mun_compiler__diagnostics__tests__possibly_uninitialized_variable_error.snap
---
source: crates/mun_compiler/src/diagnostics.rs
assertion_line: 78
expression: "compilation_errors(\"\\n\\nfn main() {\\nlet a;\\nif 5>6 {\\na = 5\\n}\\nlet b = a;\\n}\")"

---
error: use of possibly-uninitialized `a`
 --> main.mun:8:9
  |
8 | let b = a;
  |         ^ use of possibly-uninitialized `a`
  |
